# chess-stats

./: Cargo.toml  LICENSE-MIT  README.md  chess_stats-16f051f840cc1ac5.js  chess_stats-55f74b5198b1c41e.js  chess_stats-58130eb8655332ca.js  chess_stats-90ed799ee64d0d4e.js  chess_stats-a241fb036f4dbf63.js  chess_stats-b9c4f0d1af573b92.js  chess_stats-f16bcf191be37374.js  chess_stats-f16bcf191be37374_bg.wasm  index-16a0046faeb92735.css  index-68012d54d96d74f3.css  index.html  index.scss
.github/workflows/: pr_check.yml
src/: lib.rs  main.rs  router.rs
src/components/atoms/: text_input.rs
src/components/molecules/: mod.rs  username_input.rs
src/components/pages/: chesscom.rs  home.rs  lichess.rs  mod.rs
