[package]
name = "chess_stats"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.10.0"
reqwest = { version = "0.11.22", features = ["json"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
serde_json = "1.0.108"
